# aoc-2021

./: .gitignore  aoc.opam  dune  dune-project  readme.md  util.ml
day1/src/: main.rs
day2/src/: main.rs
day3/src/: main.rs
day4_ocaml/lib/: dune  lib.ml
day4_ocaml/test/: day4_ocaml.ml  dune
day4_rs/src/: main.rs
day5/lib/: day5.js  day5.ml  dune
day5/test/: day5.ml  dune
day6/lib/: day6.ml  dune
day6/test/: day6.ml  dune
day7/lib/: day7.ml  dune
day7/test/: day7.ml  dune
day8/lib/: day8.ml  dune
day8/test/: day8.ml  dune
day9/lib/: day9.ml  dune
day9/test/: day9.ml  dune
